--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -27,11 +27,6 @@
  .navigation-item {
     margin: var(--spacing-1);
   }
-  
-
- body{
-    background-color: rgb(78, 132, 184);
- }
 
  :root {
     --spacing-1: 8px;
@@ -52,6 +47,7 @@
     margin: 0 auto;
     display: flex;
     flex-direction: column;
+    background-color: rgb(78, 132, 184);
   }
 
   a {
@@ -94,6 +90,11 @@
     cursor: pointer;
   }
 
+  button {
+    font-size: 14px;
+    margin-left: 20px;
+  }
+
   #dido {
       right: 500px;
   }
@@ -101,6 +102,21 @@
   @media only screen and (max-width: 600px) {
     .about-me-container {
       flex-direction: column;
+    }
+  }
+
+ @media screen and (min-width:900px) {
+    #phone {
+      display: none;
+    }
+  }
+
+  @media screen and (max-with:900px) {
+    #phone {
+      width: 100%;
+    }
+    body {
+      display: none;
     }
   }
   
